# WorkshopApp

./: .gititgnore  CMakeLists.txt  README.md  build.ps1  build.sh
include/libutils/: utils.h
src/: main.cpp
src/libutils/: utils.cpp
test/: test_utils.cpp
